# Memory-Allocator

./: CMakeLists.txt
include/: allocator.h
src/: all  allocator  allocator.c
tests/: test  test_alignment.c  test_allocator  test_allocator.c  test_coalesce.c  test_split.c
